fixing adsense alignment

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -21,7 +21,7 @@ body {
     float:left;width:27%;
     
 }
-.bodyWrapper{width:78%;float:left;
+.bodyWrapper{width:86%;float:left;
 }
 #sticky.stick{
     margin-top: 0 !important;
